testing/tests/ui/name_mismatch_endmacro.stderr
error: expected name `foo` in `endmacro` tag, found `not_foo`
 --> <source attribute>:1:42
  |
       1 | {% macro foo(arg) %} {{arg}} {% endmacro not_foo %}
         |                                          ^ close to this token
         |
 --> tests/ui/name_mismatch_endmacro.rs:4:3
  |
4 | #[template(source = "{% macro foo(arg) %} {{arg}} {% endmacro not_foo %}", ext = "html")]
  |   ^^^^^^^^
